--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
+    "react-wrap-balancer": "^1.1.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
