--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
